test/files/neg/yimports-custom-b.check
C_2.scala:8: error: not found: type Numb
  val v: Numb = Answer
         ^
C_2.scala:9: error: not found: value println
  def greet() = println("hello, world!")
                ^
2 errors
